# Agent-Environment-Protocol

./: .gitignore  README.md  arch.md  devplan.md  pyproject.toml
docs/: api.md
examples/: demo.py  demo_dataframe.py  demo_mcp_transports.py  demo_skill_scripts.py  play.py
examples/skills/script-runner/: SKILL.md
examples/skills/script-runner/scripts/: hello.py
src/aep/: __init__.py
src/aep/core/: __init__.py  aep.py  enviroment.py  executor.py  session.py
src/aep/core/config/: __init__.py  envconfig.py  envmanager.py
src/aep/core/config/handlers/: __init__.py  base.py  library.py  mcp.py  skills.py  tools.py
src/aep/core/config/handlers/skills_util/: __init__.py  errors.py  models.py  parser.py  validator.py
tests/: test_aep.py  test_config.py  test_enviroment.py  test_session.py
tests/config/: test_envconfig.py  test_envmanager.py  test_library.py  test_mcp.py  test_skills.py  test_tools.py
tests/mcp/: echo_server.py
tests/session/: __init__.py  test_skills.py  test_tools.py
