[project]
name = "aep"
version = "0.1.0"
description = "Agent Environment Protocol - 基于文件系统的 Agent 管理协议"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "strictyaml>=1.7.3",
    "loguru>=0.7.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aep = "aep.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
